HUE-6277 [assist] Avoid right panel tabs to overlap
(cherry picked from commit 74325d1fc0577cf0ff93201c6bf4e509ae7292f7)

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -42,9 +42,11 @@
   margin-top: 5px;
   border-bottom: 1px solid @cui-default-border-color;
   padding-left: 20px;
-  text-align: center;
+  white-space: nowrap;
   & > li {
     padding-bottom: 8px;
+    display: inline-block;
+    float: none;
     & > a {
       font-size: 14px;
       padding: 10px;
